// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginReadme Readme render default 1`] = `
<div
  class="Component-window-0-1-9 Component-windowBright-0-1-11 Component-windowAutoStretch-0-1-10"
>
  <div
    class="ReadmeRaw-windowBody-0-1-1 Component-body-0-1-14"
  >
    <div
      class="ReadmeRaw-markdownWrapper-0-1-3 ReadmeRaw-markdownWrapper-0-1-8"
    >
      <div>
        markdown
      </div>
    </div>
    <div
      class="ReadmeRaw-buttonWrapper-0-1-5"
    >
      <button
        class="ReadmeRaw-showMoreButton-0-1-6 btn btn-outline-primary btn-sm"
        type="button"
      >
        show more
      </button>
    </div>
  </div>
</div>
`;

exports[`PluginReadme Readme render fullscreen 1`] = `
<div
  class="Component-window-0-1-9 Component-windowBright-0-1-11 Component-windowAutoStretch-0-1-10 Component-windowFullscreen-0-1-13"
>
  <div
    class="ReadmeRaw-windowBodyFullscreen-0-1-2 Component-body-0-1-14"
  >
    <div
      class="ReadmeRaw-markdownWrapperFullscreen-0-1-4"
    >
      <div>
        markdown
      </div>
    </div>
    <button
      class="ReadmeRaw-closeFullscreenButton-0-1-7 btn btn-light btn-sm"
      type="button"
    >
      <span
        class="undefined Component-root-0-1-16"
      >
        <i
          class="material-icons"
        >
          close
        </i>
      </span>
      close
    </button>
  </div>
</div>
`;
